Fixed misalignment issue on top paragraphs on tablet / small screen view

--- a/public/styles/main_mobile.css
+++ b/public/styles/main_mobile.css
@@ -53,6 +53,10 @@
 		padding: 0 20px;
 	}
 
+	.big-feature-text p {
+		width: 100%;
+	}
+
 	.feature {
 		display: block;
 		width: 100%;
@@ -190,6 +194,8 @@
 	.order-grid li:nth-child(4n+4) .order-box {
 		margin: 0 15px 15px 0;
 	}
+
+
 }
 
 @media screen and (max-width: 950px) {
